--- a/src/email-templates/forgot-password.ejs
+++ b/src/email-templates/forgot-password.ejs
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td style="padding-bottom: 20px; font-size: 17px;">We have received a request to set your new  password for your 
-                        Healing.tube account.
+                        Pussy.ventures account.
                     </td>
                 </tr>
                 <tr>
