--- a/src/email-templates/approve-community.ejs
+++ b/src/email-templates/approve-community.ejs
@@ -18,7 +18,8 @@
                     <img src="https://pussy.ventures/assets/images/landingpage/Pussy-Ventures-Logo.png"
                     alt=""
                        style="text-align: center;
-                       width: 430px;
+                        max-width: 380px;
+                        width: 100%;
                        height: 120px;"
                     />
                     </td>
